test/success/nostd/basics/expr_type_annotation/main.sk
module Main {

fn foo() -> () {
    ()
}

fn main() {
    let s : () = foo();
}

}