test/errors/named_arg/wrong_named_arg/named_arg_in_dynamic_call/main.sk
module Main {

fn foo(f: fn(Int)-> ()) {
    f(x: 10)
}

fn main() {

}

}